# asset-path-cmake

./: CMakeLists.txt  asset.txt  install-config.cmake  install-paths.cmake
